<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calk"
            android:icon="@drawable/ic_exposure_white_48px"
            android:title="@string/menu_calk"/>
        <item
            android:id="@+id/nav_RateLoad"
            android:icon="@drawable/ic_directions_car_white_48px"
            android:title="@string/menu_rate_load" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_perm_identity_white_48px"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_price"
            android:icon="@drawable/ic_assignment_white_48px"
            android:title="@string/menu_price" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_call_white_48px"
            android:title="@string/menu_call" />

    </group>

    <item android:title="@string/menu_developer">
        <menu>
            <item
                android:id="@+id/nav_developer"
                android:title="@string/name_developer" />
        </menu>
    </item>

</menu>
